fix: fix text alignment when text overflows
- fix text alignment when text overflows across the length of command
text field

addresses #170

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -421,7 +421,7 @@
 }
 
 #commandSuggestionTextField {
-    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-color: transparent;
     -fx-background-insets: 0;
     -fx-border-insets: 0;
     -fx-border-width: 1;
